--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">furry_octo_waddle</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="button_learn">Learn !</string>
+    <string name="button_test">Test</string>
+    <string name="button_add_words">Add new words</string>
+    <string name="button_translate">Translate</string>
 
 </resources>
