behaviour of the buttons, textviews and edittexts of the activity 'Learn'

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="add_button">Add !</string>
     <string name="string_delete">Delete</string>
     <string name="string_modify">Modify</string>
+    <string name="string_save">Save!</string>
 
 </resources>
