Standardization of the activity 'Add' + modification of the focus of the EditText in the activity 'Learn'

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="string_delete">Delete</string>
     <string name="string_modify">Modify</string>
     <string name="string_save">Save!</string>
+    <string name="string_add">Add it!</string>
 
 </resources>
