Creation and implementation of TranslateActivity + implementation of the button in MainActivity to start it + Layouts (list and a row, mofication of a word)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="string_modify">Modify</string>
     <string name="string_save">Save!</string>
     <string name="string_add">Add it!</string>
+    <string name="string_update">Update</string>
 
 </resources>
