Add of the action bar in the activities + improvement add of the 'answer' button in the activity 'Test'

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="string_save">Save!</string>
     <string name="string_add">Add it!</string>
     <string name="string_update">Update</string>
+    <string name="string_answer">Ans</string>
 
 </resources>
