Add of the final score at the end of the activity 'Test'

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="string_add">Add it!</string>
     <string name="string_update">Update</string>
     <string name="string_answer">Ans</string>
+    <string name="string_results">Results</string>
 
 </resources>
