Action mode implemented in LearnActivity (Save, delete, Cancel, Modify)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="string_translate">Translate</string>
     <string name="add_button">Add !</string>
     <string name="string_delete">Delete</string>
+    <string name="string_cancel">Cancel</string>
     <string name="string_modify">Modify</string>
     <string name="string_save">Save!</string>
     <string name="string_add">Add it!</string>
