--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="string_update">Update</string>
     <string name="string_answer">Ans</string>
     <string name="string_results">Results</string>
+    <string name="string_settings">Settings</string>
+    <string name="string_extra_mode">Extra</string>
 
 </resources>
