--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,17 @@
     <string name="string_results">Results</string>
     <string name="string_settings">Settings</string>
     <string name="string_extra_mode">Extra</string>
+    <string name="string_languages_displayed">The Languages</string>
+    <string name="string_mylanguage">My Language</string>
+    <string name="red">French</string>
+    <string name="blue">English</string>
+    <string-array name="items">
+    <item>Item 1</item>
+    <item>Item 2</item>
+    <item>Item 3</item>
+    <item>Item 4</item>
+    <item>Item 5</item>
+    <item>Item 6</item>
+</string-array>
 
 </resources>
