--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="string_extra_mode">Extra</string>
     <string name="string_languages_displayed">The Languages</string>
     <string name="string_mylanguage">My Language</string>
+    <string name="string_wordlanguage">Language Of This Word</string>
     <string name="red">French</string>
     <string name="blue">English</string>
     <string-array name="items">
