New features: - during modification of a word you can change its languages. - For display, filters by languages are now provided
Saving, deleting Languages are now implemented, but it needs a visual implementation for calling these methods and most importantly to give the possibility to the user gor adding, managing their own languages
Attention : the aftermath on the concerned words after a modification of a language is not implemented

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="string_settings">Settings</string>
     <string name="string_extra_mode">Extra</string>
     <string name="string_languages_displayed">The Languages</string>
-    <string name="string_mylanguage">My Language</string>
+    <string name="string_mylanguage">Language Of This Word</string>
+    <string name="string_mylanguages_displayed">My Language</string>
     <string name="string_wordlanguage">Language Of This Word</string>
     <string name="red">French</string>
     <string name="blue">English</string>
